# Proyecto_Sistema_de_Planificacion

./: CMakeLists.txt  Equipo.cpp  Equipo.h  EquipoCritico.cpp  EquipoCritico.h  EquipoEstandar.cpp  EquipoEstandar.h  Estrategias.cpp  Estrategias.h  Excepciones.h  Incidencia.cpp  Incidencia.h  IncidenciaGrave.cpp  IncidenciaGrave.h  IncidenciaLeve.cpp  IncidenciaLeve.h  IncidenciaMedia.cpp  IncidenciaMedia.h  PROYECTO - 1-  PROGRA 2.txt  Sistema.cpp  Sistema.h  datos.txt  main.cpp
